--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,15 +5,15 @@
   <script src="https://cdn.usefathom.com/script.js" data-site="HHCOQNEQ" defer></script>
 
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/images/logo.svg" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Dionamite is a web agency, fully qualified to take your business online. We develop mobile and web apps, as well as fully customized and functional SEO-ready websites." />
+    content="Eduardo is a web Developer, fully qualified to take your business online. We develop mobile and web apps, as well as fully customized and functional SEO-ready websites." />
   <meta name="keywords" content="Web Agency, Web Development, Websites, Web Design, WordPress">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="/client/public/lapiz.ico" />
 
-  <title>Dionamite - Web Agency</title>
+  <title>Eduardo Pereira - Web Developer</title>
 </head>
 
 <body>
